Se habilita acceso remoto de H2

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,5 +11,9 @@ spring:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
   h2:
-    console.path: /h2
-    console.enabled: true
+    console:
+      path: /h2
+      enabled: true
+      settings:
+        web-allow-others: true
+    
